test/expected/simple-timer.txt
/scripts/simple-timer.js:9
  throw new Error('trace');
  ^

Error: trace
    at callback (/scripts/simple-timer.js:9:9)
    at Timer.listOnTimeout (timers.js:92:15)
    at Object.<anonymous> (/scripts/simple-timer.js:8:1)
    at Module._compile (module.js:413:34)
    at Object.Module._extensions..js (module.js:422:10)
    at Module.load (module.js:357:32)
    at Function.Module._load (module.js:314:12)
    at Function.Module.runMain (module.js:447:10)
    at startup (node.js:141:18)
    at node.js:933:3
